# prisma-client-py-sample

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
prisma/: schema.prisma  set_database_url.sh
