[tool.poetry]
name = "prisma-client-py-sample"
version = "0.1.0"
description = ""
authors = ["Makoto Yoshioka <y.mako2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prisma = "^0.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
